crates/fixtures/tests/snapshots/hostile__content_frame_shorter_than_a_line.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 307200,
    "height": 204800,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 20480,
          "ty": 20480
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Two lines at least, in a frame ",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 50,
                "x": 6353,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 42,
                "x": 14733,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 20917,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 39,
                "x": 23542,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 36,
                "x": 26899,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 41,
                "x": 30256,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 32,
                "x": 37082,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 46,
                "x": 42827,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 1,
                "x": 47716,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 28,
                "x": 50341,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 47,
                "x": 56074,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 1,
                "x": 59735,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 39,
                "x": 62360,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 32,
                "x": 65717,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 28,
                "x": 71349,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 46,
                "x": 77082,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 47,
                "x": 81971,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 474,
                "x": 85632,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 1,
                "x": 89011,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 36,
                "x": 91636,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 41,
                "x": 94993,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 1,
                "x": 101819,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 28,
                "x": 104444,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 1,
                "x": 110177,
                "y": 10707,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 33,
                "x": 112802,
                "y": 10707,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 45,
                "x": 116789,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 28,
                "x": 121430,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 40,
                "x": 127107,
                "y": 10707,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 32,
                "x": 137256,
                "y": 10707,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 1,
                "x": 143001,
                "y": 10707,
                "text": {
                  "start": 30,
                  "end": 31
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "that holds none.",
            "glyphs": [
              {
                "id": 47,
                "x": 0,
                "y": 24224,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 3661,
                "y": 24224,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 28,
                "x": 10431,
                "y": 24224,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 47,
                "x": 16164,
                "y": 24224,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 1,
                "x": 19825,
                "y": 24224,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 35,
                "x": 22450,
                "y": 24224,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 42,
                "x": 29220,
                "y": 24224,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 39,
                "x": 35291,
                "y": 24224,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 31,
                "x": 38648,
                "y": 24224,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 46,
                "x": 45035,
                "y": 24224,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 1,
                "x": 49924,
                "y": 24224,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 41,
                "x": 52549,
                "y": 24224,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 42,
                "x": 59375,
                "y": 24224,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 41,
                "x": 65559,
                "y": 24224,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 32,
                "x": 72385,
                "y": 24224,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 473,
                "x": 77803,
                "y": 24224,
                "text": {
                  "start": 15,
                  "end": 16
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "And a second paragraph.",
            "glyphs": [
              {
                "id": 2,
                "x": 0,
                "y": 45933,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 41,
                "x": 7479,
                "y": 45933,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 31,
                "x": 14305,
                "y": 45933,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 20692,
                "y": 45933,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 28,
                "x": 23317,
                "y": 45933,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 1,
                "x": 29050,
                "y": 45933,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 46,
                "x": 31675,
                "y": 45933,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 32,
                "x": 36564,
                "y": 45933,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 30,
                "x": 42309,
                "y": 45933,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 42,
                "x": 47806,
                "y": 45933,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 41,
                "x": 53990,
                "y": 45933,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 31,
                "x": 60816,
                "y": 45933,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 1,
                "x": 67203,
                "y": 45933,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 43,
                "x": 69828,
                "y": 45933,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 28,
                "x": 76395,
                "y": 45933,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 45,
                "x": 82072,
                "y": 45933,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 28,
                "x": 86713,
                "y": 45933,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 34,
                "x": 92334,
                "y": 45933,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 45,
                "x": 98169,
                "y": 45933,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 28,
                "x": 102810,
                "y": 45933,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 43,
                "x": 108318,
                "y": 45933,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 35,
                "x": 114772,
                "y": 45933,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 473,
                "x": 121542,
                "y": 45933,
                "text": {
                  "start": 22,
                  "end": 23
                }
              }
            ],
            "layer": "content"
          }
        ]
      },
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 194560,
          "ty": 20480
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 8448,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "A note.",
            "glyphs": [
              {
                "id": 2,
                "x": 0,
                "y": 8241,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 1,
                "x": 5609,
                "y": 8241,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 41,
                "x": 7577,
                "y": 8241,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 12696,
                "y": 8241,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 47,
                "x": 17249,
                "y": 8241,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 19995,
                "y": 8241,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 473,
                "x": 24058,
                "y": 8241,
                "text": {
                  "start": 6,
                  "end": 7
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
