crates/fixtures/tests/snapshots/hostile__content_image_corrupt.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "image",
            "asset": "c96b4adc5e8588e4243d099dc3cc2871c6fd3c9cb54c073660865bc4f99ea70d",
            "rect": {
              "origin": {
                "x": 0,
                "y": 0
              },
              "width": 98304,
              "height": 73728
            },
            "alt": "Corrupt header",
            "layer": "content"
          }
        ]
      }
    ]
  }
]
