crates/fixtures/tests/snapshots/hostile__content_image_empty_alt.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "image",
            "asset": "49e1dad481e94dfab7c9573a9a81d56aa2ca629fe15a3f7a910aa4f47601c00d",
            "rect": {
              "origin": {
                "x": 0,
                "y": 0
              },
              "width": 768,
              "height": 768
            },
            "alt": "",
            "layer": "content"
          }
        ]
      }
    ]
  }
]
