crates/fixtures/tests/snapshots/hostile__content_image_missing.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "image",
            "asset": "0000000000000000000000000000000000000000000000000000000000000000",
            "rect": {
              "origin": {
                "x": 0,
                "y": 0
              },
              "width": 98304,
              "height": 73728
            },
            "alt": "A missing image",
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "The following text remains.",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 92627,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 6803,
                "y": 92627,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 13573,
                "y": 92627,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 19318,
                "y": 92627,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 33,
                "x": 21943,
                "y": 92627,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 42,
                "x": 25761,
                "y": 92627,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 39,
                "x": 31832,
                "y": 92627,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 39,
                "x": 35189,
                "y": 92627,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 42,
                "x": 38546,
                "y": 92627,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 50,
                "x": 44730,
                "y": 92627,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 36,
                "x": 53336,
                "y": 92627,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 41,
                "x": 56693,
                "y": 92627,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 34,
                "x": 63519,
                "y": 92627,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 1,
                "x": 69354,
                "y": 92627,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 47,
                "x": 71979,
                "y": 92627,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 32,
                "x": 75640,
                "y": 92627,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 51,
                "x": 81385,
                "y": 92627,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 47,
                "x": 87310,
                "y": 92627,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 1,
                "x": 90971,
                "y": 92627,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 45,
                "x": 93596,
                "y": 92627,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 32,
                "x": 98248,
                "y": 92627,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 40,
                "x": 103993,
                "y": 92627,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 28,
                "x": 114142,
                "y": 92627,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 36,
                "x": 119875,
                "y": 92627,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 41,
                "x": 123232,
                "y": 92627,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 46,
                "x": 130058,
                "y": 92627,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 473,
                "x": 134721,
                "y": 92627,
                "text": {
                  "start": 26,
                  "end": 27
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
