crates/fixtures/tests/snapshots/hostile__content_infeasible_solver_domain.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 102400,
    "height": 61440,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 0,
          "ty": 0
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "cell",
            "glyphs": [
              {
                "id": 30,
                "x": 0,
                "y": 9733,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 4997,
                "y": 9733,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 39,
                "x": 10117,
                "y": 9733,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 39,
                "x": 13169,
                "y": 9733,
                "text": {
                  "start": 3,
                  "end": 4
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "cell",
            "glyphs": [
              {
                "id": 30,
                "x": 51200,
                "y": 9733,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 56197,
                "y": 9733,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 39,
                "x": 61317,
                "y": 9733,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 39,
                "x": 64369,
                "y": 9733,
                "text": {
                  "start": 3,
                  "end": 4
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
